# rpi

./: CHANGELOG.md  Cargo.toml  ITERATION-2.md  README.md
crates/pi-agent/: Cargo.toml
crates/pi-agent/src/: agent.rs  agent_loop.rs  context_manager.rs  lib.rs  test_fixtures.rs  types.rs
crates/pi-agent/tests/: agent_integration_tests.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: api_registry.rs  lib.rs  models.rs  retry.rs  stream.rs  test_fixtures.rs  token_counter.rs  types.rs
crates/pi-ai/src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  cerebras.rs  deepseek.rs  gemini_cli.rs  github_copilot.rs  google.rs  groq.rs  huggingface.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  openai.rs  opencode.rs  openrouter.rs  qwen.rs  vertex_ai.rs  xai.rs
crates/pi-ai/src/utils/: event_stream.rs  json_parse.rs  mod.rs
crates/pi-ai/tests/: provider_integration_tests.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: config.rs  lib.rs  main.rs
crates/pi-coding-agent/src/cli/: args.rs  initial_message.rs  mod.rs
crates/pi-coding-agent/src/core/: agent_session.rs  mod.rs  permissions.rs  session_manager.rs  system_prompt.rs
crates/pi-coding-agent/src/core/auth/: mod.rs  oauth_server.rs  providers.rs  refresh.rs  token_storage.rs
crates/pi-coding-agent/src/core/compaction/: compactor.rs  mod.rs  summary_prompt.rs
crates/pi-coding-agent/src/core/export/: html.rs  html_template.rs  mod.rs
crates/pi-coding-agent/src/core/extensions/: api.rs  hot_reload.rs  loader.rs  mod.rs  runner.rs  sandbox.rs  types.rs
crates/pi-coding-agent/src/core/extensions/builtin/: example_counter.rs  mod.rs
crates/pi-coding-agent/src/core/skills/: builtin.rs  mod.rs  registry.rs  types.rs
crates/pi-coding-agent/src/core/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mcp.rs  mod.rs  read.rs  truncate.rs  write.rs
crates/pi-coding-agent/src/core/tools/notebook/: executor.rs  kernel.rs  mod.rs  state.rs
crates/pi-coding-agent/src/modes/: input_history.rs  interactive.rs  interactive_components.rs  keybindings_config.rs  message_components.rs  message_history.rs  mod.rs  print_mode.rs  settings.rs  theme.rs
crates/pi-coding-agent/src/rpc/: methods.rs  mod.rs  server.rs  types.rs
crates/pi-coding-agent/tests/: cli_tests.rs  config_tests.rs  tool_integration_tests.rs
crates/pi-mcp/: Cargo.toml
crates/pi-tui/: Cargo.toml
docs/: pi-mono-research.md  porting-plan.md
docs/porting-plan/: ITERATION-3.md  (+20 more)
(+33 files in other folders)
