[package]
name = "pi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
pi-ai = { path = "../pi-ai" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
