[package]
name = "pi-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
pin-project-lite.workspace = true
base64.workspace = true
chrono.workspace = true
bytes.workspace = true
async-stream = "0.3"
