[package]
name = "pi-coding-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-ai = { path = "../pi-ai" }
pi-tui = { path = "../pi-tui" }
pi-agent = { path = "../pi-agent" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
similar.workspace = true
regex.workspace = true
ignore.workspace = true
globset.workspace = true
directories.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
async-trait.workspace = true
dirs = "5"
